--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 # render.yaml
 services:
-  - type: web  # Використаємо web для стабільності, але це буде фоновим завданням
+  - type: web
     name: game-portal-bot
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python bot.py"
+    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
+    startCommand: python bot.py
     autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
